# EECE5554_FinalProject

./: README.md  final_analysis.ipynb
FinalProject/: Readme.md  param.yaml
FinalProject/datapreprocessing/: bagtoimage.py  bagtotime.py  clahe.py  gps.py
LAB 4/imu_gps_driver/: package.xml
LAB 4/imu_gps_driver/msg/: gps_data_format.msg
LAB 4/imu_gps_driver/scripts/: bag2csv.py  gps_pub.py
LAB1/data/: football1.bag  football1.csv  stationary.csv
LAB1/gps_driver/scripts/: gps.py
LAB1/gps_driver_cpp/: CMakeLists.txt  package.xml
LAB1/gps_driver_cpp/data/: 2022-02-05-16-27-01.bag  2022-02-05-16-29-57.bag  2022-02-05-16-44-17.bag  2022-02-05-16-46-39.bag  st.bag  st1.bag  st1_result.csv  st_result.csv  stt1.bag  stt1_result.csv
LAB1/gps_driver_cpp/scripts/: gps_pub.py
LAB2/: CMakeLists.txt  package.xml
LAB2/analysis/: Lab2.ipynb
LAB2/msg/: GPS_RTK.msg
LAB2/scripts/: bag.py  rkt.py
LAB3/: CMakeLists.txt  package.xml
LAB3/analysis/: IMU_Analysis.ipynb  allan_variance.m
LAB3/scripts/: imu.py
LAB4/imu_gps_driver/: CMakeLists.txt  imu_gps_driver.launch
LAB4/imu_gps_driver/scripts/: imu_driver_script.py
LAB5/: Calib_Results.mat  pano.m
PA0/: PA0.txt
PA1/: Readme.md
PA1/beginner_tutorials/: CMakeLists.txt
PA1/beginner_tutorials/scripts/: listener.py
beginner_tutorials/: package.xml
beginner_tutorials/launch/: turtle_pub_sub.launch
beginner_tutorials/scripts/: talker.py
data/: stationary.bag
gps_driver/: CMakeLists.txt  package.xml
gps_driver/msg/: GPS.msg
gps_driver/scripts/: bag.py
